--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,12 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Poppins", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+
+.color-pallete1{
+  color: #0F165C;
+}
+
+.button-click-1{
+  background-color: #00B7FF;
 }
