--- a/views/partials/js.ejs
+++ b/views/partials/js.ejs
@@ -1,3 +1,7 @@
+    <!-- CHART -->
+    	<!-- Load plotly.js into the DOM -->
+	  <script src='https://cdn.plot.ly/plotly-2.9.0.min.js'></script>
+    
     <!-- TEMPLATE 1 -->
     <!-- Bootstrap core JavaScript-->
     <script src="/sb-admin-2/vendor/jquery/jquery.min.js"></script>
@@ -15,6 +19,7 @@
 
     <!-- Page level custom scripts -->
     <script src="/sb-admin-2/js/demo/datatables-demo.js"></script>
+    <script src="https://cdn.ckeditor.com/4.14.0/standard/ckeditor.js"></script>
 
 
     <!-- TEMPLATE 2 -->
