--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -25,7 +25,7 @@
         aria-expanded="false"
       >
         <span class="mr-2 d-none d-lg-inline text-gray-600 small"
-          >Valerie Luna</span
+          ><%= name %></span
         >
       </a>
       <!-- Dropdown - User Information -->
