--- a/views/admin/dashboard/view_dashboard.ejs
+++ b/views/admin/dashboard/view_dashboard.ejs
@@ -108,109 +108,112 @@
             </div>
           </div>
         </div>
-        <button class="btn btn-primary btn-sm">
-          <i class="fas fa-folder">
-            <% if(lampu.lampu1 === 'OFF') { %> Matikan <% } else { %> Hidupkan
-            <% } %>
-          </i>
-        </button>
-        <div class="">
-          <% if(lampu.lampu1 === 'ON'){ %>
-            <div class="btn btn-success">
-              <%= lampu.lampu1 %>
-            </div>
-          <% } else if(lampu.lampu1 === 'OFF'){ %>
-            <div class="btn btn-danger">
-              <%= lampu.lampu1 %>
-            </div>
-          <% } %>
-        </div>
-        <form
-          action="/dashboard/lampu1/62414bbd1a431cac0b339833?_method=PUT"
-          style="display: inline-block"
-          method="POST"
-        >
-          <% if(lampu.lampu1 === 'OFF') { %> 
-            <button class="btn btn-danger btn-sm">
-              <i class="fas fa-folder">
-                MATIKAN
-              </i>
-            </button>
-          <% } else if(lampu.lampu1 === 'ON')  { %> 
-            <button class="btn btn-primary btn-sm">
-              <i class="fas fa-folder">
-                HIDUPKAN
-              </i>
-            </button>
-          <% } %>
-
-        </form>
-        <form
-          action="/dashboard/lampu1/62414bbd1a431cac0b339833?_method=PUT"
-          style="display: inline-block"
-          method="POST"
-        >
-          <button class="btn btn-primary btn-sm">
-            <i class="fas fa-folder">
-              <% if(lampu.lampu1 = 'ON') { %> 
-                Matikan 
-              <% } else if(lampu.lampu1 = 'OFF') { %> 
-                Hidupkan 
-              <% } %>
-            </i>
-          </button>
-        </form>
-        <form
-        action="/dashboard/lampu2/62414bbd1a431cac0b339833?_method=PUT"
-        style="display: inline-block;"
-        method="POST"
-      >
-        <button class="btn btn-success btn-sm">
-          <i class="fas fa-folder">
-            <% if(lampu.lampu2 === 'OFF') { %> 
-              
-              Matikan 
-              
-            <% } else { %>
-              Hidupkan 
-            <% } %>
-          </i>
-        </button>
-      </form>
-      <div>
-        <% if(lampu.lampu1 === 'ON'){ %>
-          <span class="badge badge-success"> Aktif </span>
-          <% } else { %>
-          <span class="badge badge-danger"> Tidak Aktif </span>
-          <% } %>
-      </div>
-      <div>
-        <h1>Suhu Celcius</h1>
-        <h1 class="text-bold"><%= suhu.celcius %></h1>
-      </div>
-      <div>
-        <h1>Suhu Celcius</h1>
-        <h1 class="text-bold"><%= suhu.fahreinhet %></h1>
-      </div>
-        <button class="col-xl-2 col-md-5">
-          <div class="card py-2 button-click-1">
-            <div class="card-body text-center">
-              <div class="row">
-                <div class="col mr-2">
-                  <img
-                    src="/images/img-lamp.png"
-                    alt=""
-                    width="82"
-                    height="82"
-                  />
-                  <div class="h5 mb-0 font-weight-medium color-pallete1">
-                    Lamp 1
-                  </div>
+        <div class="col-lg-5 col-12 col-md-10">
+          <div class="row">
+            <form
+              action="/dashboard/lampu1/62414bbd1a431cac0b339833?_method=PUT"
+              style="display: inline-block"
+              method="POST"
+              class="mb-3"
+            >
+              <% if(lampu.lampu1 === 'OFF') { %>
+                <div class="col-lg-3">
+                  <button class="btn-lamp-off btn btn-default noHover">
+                    <img src="/images/icon-lamp2.svg" alt="" height="60" width="60" class="mb-2">
+                    <h1 class="title">Lamp 1 OFF</h1>
+                  </button>
                 </div>
+              <% } else if(lampu.lampu1 === 'ON') { %>
+                <div class="col-lg-3">
+                  <button class="btn-lamp-on btn-default noHover">
+                    <img src="/images/icon-lamp1.svg" alt="" height="60" width="60" class="mb-2">
+                    <h1 class="title">Lamp 1 ON</h1>
+                  </button>
+                </div>
+              <% } %>
+            </form>         
+            <form
+              action="/dashboard/lampu2/62414bbd1a431cac0b339833?_method=PUT"
+              style="display: inline-block"
+              method="POST"
+              class="mb-3"
+            >
+              <% if(lampu.lampu2 === 'OFF') { %>
+                <div class="col-lg-3">
+                  <button class="btn-lamp-off btn btn-default">
+                    <img src="/images/icon-lamp2.svg" alt="" height="60" width="60" class="mb-2">
+                    <h1 class="title">Lamp 2 OFF</h1>
+                  </button>
+                </div>
+              <% } else if(lampu.lampu2 === 'ON') { %>
+                <div class="col-lg-3">
+                  <button class="btn-lamp-on btn-default">
+                    <img src="/images/icon-lamp1.svg" alt="" height="60" width="60" class="mb-2">
+                    <h1 class="title">Lamp 2 ON</h1>
+                  </button>
+                </div>
+              <% } %>
+            </form>  
+            <form
+            action="/dashboard/pump1/62430c4028e1eef562010284?_method=PUT"
+            style="display: inline-block"
+            method="POST"
+            >
+              <% if(pump.pump1 === 'OFF') { %>
+                <div class="col-lg-3">
+                  <button class="btn-lamp-off btn btn-default noHover">
+                    <img src="/images/icon-lamp2.svg" alt="" height="60" width="60" class="mb-2">
+        
+                    <h1 class="title">Pump 1 ON</h1>
+                  </button>
+                </div>
+              <% } else if(pump.pump1 === 'ON') { %>
+                <div class="col-lg-3">
+                  <button class="btn-lamp-on btn-default noHover">
+                    <img src="/images/icon-lamp1.svg" alt="" height="60" width="60" class="mb-2">
+                    <h1 class="title">Pump 1 OFF</h1>
+                  </button>
+                </div>
+              <% } %>
+            </form>  
+          <form
+            action="/dashboard/pump2/62430c4028e1eef562010284?_method=PUT"
+            style="display: inline-block"
+            method="POST"
+          >
+            <% if(pump.pump2 === 'OFF') { %>
+              <div class="col-lg-3">
+                <button class="btn-lamp-off btn btn-default noHover">
+                  <img src="/images/icon-lamp2.svg" alt="" height="60" width="60" class="mb-2">
+                  <h1 class="title">Pump 2 ON</h1>
+                </button>
               </div>
-            </div>
+            <% } else if(pump.pump2 === 'ON') { %>
+              <div class="col-lg-3">
+                <button class="btn-lamp-on btn-default noHover">
+                  <img src="/images/icon-lamp1.svg" alt="" height="60" width="60" class="mb-2">
+                  <h1 class="title">Pump 2 OFF</h1>
+                </button>
+              </div>
+            <% } %>
+          </form> 
           </div>
-        </button>
+        </div>
+        <div>
+          <h1>Suhu Celcius</h1>
+          <h1 class="text-bold"><%= suhu.celcius %></h1>
+        </div>
+        <div>
+          <h1>Suhu Celcius</h1>
+          <h1 class="text-bold"><%= suhu.fahreinhet %></h1>
+        </div>
+        <div>
+          <h1>Kelembapan Tanah</h1>
+          <h1 class="text-bold"><%= tanah.kelembapanTanah %></h1>
+        </div>
+        <div id="myDiv">
+          <!-- Plotly chart will be drawn inside this DIV -->
+        </div>
       </div>
       <!-- /.container-fluid -->
     </div>
@@ -264,4 +267,5 @@
   </div>
 </div>
 
-<%- include('../../partials/js.ejs') %>
+<%- include('../../partials/js.ejs') %> <%- include('../../partials/gauges.ejs')
+%>
