--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,5 +1,5 @@
 <ul
-  class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion"
+  class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion h-auto"
   id="accordionSidebar"
 >
   <!-- Sidebar - Brand -->
@@ -18,7 +18,7 @@
 
   <!-- Nav Item - Dashboard -->
   <li class="nav-item">
-    <a class="nav-link" href="/admin/dashboard">
+    <a class="nav-link" href="/">
       <i class="fa fa-tachometer-alt"></i>
       <span>Dashboard</span></a
     >
@@ -26,7 +26,7 @@
 
 
   <li class="nav-item">
-    <a class="nav-link" href="/admin/bank">
+    <a class="nav-link" href="/user">
       <i class="fas fa-fw fa-money-check-alt"></i>
       <span>User</span>
     </a>
