--- a/views/admin/user/create.ejs
+++ b/views/admin/user/create.ejs
@@ -32,7 +32,7 @@
           </div>
           <!-- /.container-fluid -->
         </section>
-        <form action="/admin/category" method="POST">
+        <form action="/user/create" method="POST">
           <div class="row">
             <div class="col-12">
               <div class="card">
