--- a/views/admin/user/table.ejs
+++ b/views/admin/user/table.ejs
@@ -13,6 +13,8 @@
     <tr>
       <td><%= i + 1 %></td>
       <td><%= user[i].name %></td>
+      <td><%= user[i].email %></td>
+      <td><%= user[i].username %></td>
       <td>
         <form
           action="/user/delete/<%= user[i]._id %>?_method=DELETE"
