--- a/views/partials/gauges.ejs
+++ b/views/partials/gauges.ejs
@@ -1,37 +1,29 @@
 <script>
-  var data = [
-    {
-      type: "indicator",
-      mode: "gauge+number+delta",
-      value: suhu.celcius,
-      title: { text: "Speed", font: { size: 24 } },
-      delta: { reference: 400, increasing: { color: "RebeccaPurple" } },
-      gauge: {
-        axis: { range: [null, 500], tickwidth: 1, tickcolor: "darkblue" },
-        bar: { color: "darkblue" },
-        bgcolor: "white",
-        borderwidth: 2,
-        bordercolor: "gray",
-        steps: [
-          { range: [0, 250], color: "cyan" },
-          { range: [250, 400], color: "royalblue" },
-        ],
-        threshold: {
-          line: { color: "red", width: 4 },
-          thickness: 0.75,
-          value: 490,
+    setInterval(getData,1000)
+
+
+function getData(){
+    $.ajax({
+        type: "GET",
+        headers: {
+            "Content-Type": "application/json"
         },
-      },
-    },
-  ];
+        url: "http://localhost:4000/api/v1/lampu/lampu",
+        success: function (data) {
+            $("#avatar").attr("src", data.avatar_url);
+        
+            $("#lampuu").text(data.data[0].lampu1);
+            const date = new Date();
+              document.getElementById("timeSerial").innerHTML = date.toLocaleTimeString();
+        }
+    });
+}
 
-  var layout = {
-    width: 500,
-    height: 400,
-    margin: { t: 25, r: 25, l: 25, b: 25 },
-    paper_bgcolor: "lavender",
-    font: { color: "darkblue", family: "Arial" },
-  };
 
-  Plotly.newPlot("myDiv", data, layout);
+setInterval(myTimer, 1000);
+
+function myTimer() {
+  const date = new Date();
+  document.getElementById("demo").innerHTML = date.toLocaleTimeString();
+}
 </script>
