--- a/views/partials/gauges.ejs
+++ b/views/partials/gauges.ejs
@@ -24,7 +24,7 @@
       headers: {
         "Content-Type": "application/json",
       },
-      url: "https://kirei-iot-server.herokuapp.com/api/v1/kirei/suhu",
+      url: "https://kirei-iot-server.herokuapp.com/api/v1/suhu",
       success: function (data) {
         $("#suhuCelcius").text(data.data[0].celcius);
         $("#humidity").text(data.data[0].humidity);
