--- a/views/admin/dashboard/view_dashboard.ejs
+++ b/views/admin/dashboard/view_dashboard.ejs
@@ -109,6 +109,12 @@
             </div>
           </div>
         </div>
+        <div class="container">
+          <h1>Data Suhu Celcius dan Humidity</h1>
+          <div>
+            <canvas id="canvas"></canvas>
+          </div>
+        </div>
         <div>
           <h1 id="lampu1"></h1>
         </div>
@@ -303,4 +309,4 @@
 </div>
 
 <%- include('../../partials/js.ejs') %> <%- include('../../partials/gauges.ejs')
-%>
+%><%- include('../../partials/graph.ejs') %>
