--- a/views/admin/dashboard/view_dashboard.ejs
+++ b/views/admin/dashboard/view_dashboard.ejs
@@ -252,6 +252,10 @@
           <h1>Water Level</h1>
           <h1 class="text-bold" id="waterlevel"></h1>
         </div>
+        <div>
+          <h1>TDS Level</h1>
+          <h1 class="text-bold" id="kekeruhanAir"></h1>
+        </div>
         <div id="myDiv">
           <!-- Plotly chart will be drawn inside this DIV -->
         </div>
