--- a/views/partials/graph.ejs
+++ b/views/partials/graph.ejs
@@ -36,14 +36,14 @@
           labels: timeCelcius,
           datasets: [
             {
-              label: "High Temperature F",
+              label: "Celcius",
               data: celcius,
               backgroundColor: "transparent",
               borderColor: "red",
               borderWidth: 4,
             },
             {
-              label: "Low Temperature F",
+              label: "Humidity",
               data: fahreinhet,
               backgroundColor: "transparent",
               borderColor: "green",
