--- a/views/partials/js.ejs
+++ b/views/partials/js.ejs
@@ -1,3 +1,5 @@
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.js"></script>
+    
     <!-- CHART -->
     	<!-- Load plotly.js into the DOM -->
 	  <script src='https://cdn.plot.ly/plotly-2.9.0.min.js'></script>
