--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,55 +2,133 @@ body {
   font: 14px "Poppins", Helvetica, Arial, sans-serif;
 }
 
-
-.color-pallete1{
-  color: #0F165C;
+.title-dashboard {
+  font-weight: 600;
+  font-size: 28px;
+  color: #0f165c;
+  margin-bottom: 4px;
 }
 
-.button-click-1{
-  background-color: #097EEB;
+.subtitle-dashboard {
+  font-weight: 400;
+  font-size: 16px;
+  color: #828ea5;
+}
+.image-profile {
+  height: 50px;
+  width: 50px;
+}
+.user-name {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  margin-left: 8px;
+  color: #0f165c;
 }
 
-.btn-lamp-on{
-  height: 150px;
-  width:auto;
-  background-color: #097EEB !important;
+.title-monitoring {
+  font-weight: 600;
+  font-size: 20px;
+  color: #0d1458;
+  margin-bottom: 18px;
+}
+
+.monitoring .card {
+  background: #097eeb;
+  border-radius: 14px;
+  padding: 32px;
+}
+
+.monitoring .card-title {
+  font-weight: 500;
+  font-size: 12px;
+  margin-bottom: 0px;
+  color: #ffffff;
+}
+
+.monitoring .result {
+  font-weight: 500;
+  font-size: 16px;
+
+  color: #ffffff;
+}
+
+.monitoring .info {
+  font-weight: 300;
+  font-size: 10px;
+  color: #ffffff;
+}
+
+.card-icon {
+  height: 60px;
+  width: 60px;
+  margin-right: 10px;
+}
+
+.color-pallete1 {
+  color: #0f165c;
+}
+
+.button-click-1 {
+  background-color: #097eeb;
+}
+
+.btn-lamp-on {
+  max-height: 150px;
+  background-color: #097eeb !important;
   border-radius: 20px;
   padding: 10px;
-
+  margin:0px 6px;
+  padding:20px 20px;
 }
 
-.btn-lamp-on h1{
+.btn-lamp-on h1 {
   font-weight: 500;
   font-size: 18px;
   color: #ffff !important;
 }
 
-.btn-lamp-off{
-  height: 150px;
-  width:auto;
+.btn-lamp-off {
+  max-height: 150px;
   background-color: #fff !important;
-  color: #097EEB !important;
+  color: #097eeb !important;
   border-radius: 20px;
   padding: 10px;
   font-weight: 500;
   font-size: 18px;
+  margin:0px 6px;
+  padding:20px 20px;
 }
 
-.btn-lamp-off h1{
+.btn-lamp-off h1 {
   font-weight: 500;
   font-size: 18px;
-  color: #097EEB !important;
+  color: #097eeb !important;
 }
 
-@media (min-width: 992px) { 
-  .btn-lamp-on{
-    width:150px; 
+.card-graph{
+  border-radius:10px
+}
+
+@media (min-width: 992px) {
+  .monitoring .card-title {
+    font-size: 18px;
   }
 
-  
-  .btn-lamp-off{
-    width:150px;
+  .monitoring .result {
+    font-size: 24px;
   }
-  
- }
+
+  .monitoring .info {
+    font-size: 16px;
+  }
+
+  .card-icon {
+    height: 80px;
+    width: 80px;
+    margin-right: 4px;
+  }
+  .card-graph{
+    border-radius:30px
+  }
+}
