--- a/views/partials/gauges.ejs
+++ b/views/partials/gauges.ejs
@@ -4,6 +4,7 @@
   setInterval(getDataKelembapanTanah, 1000);
   setInterval(getwaterlevel, 1000);
   setInterval(getkeruhAir, 1000);
+
   function getDataLampu() {
     $.ajax({
       type: "GET",
@@ -53,7 +54,7 @@
       },
       url: "https://kirei-iot-server.herokuapp.com/api/v1/water",
       success: function (data) {
-        $("#waterlevel").text(data.data[0].waterlevel);
+        $("#waterlevel").text(parseFloat(data.data[0].waterlevel).toPrecision(3));
       },
     });
   }
