--- a/views/admin/user/view_user.ejs
+++ b/views/admin/user/view_user.ejs
@@ -18,9 +18,9 @@
       <div class="container-fluid">
         <section id="content">
           <div class="container-fluid">
-            <div class="row mb-2">
+            <div class="row mb-2 align-items-center">
               <div class="col-sm-6">
-                <h1>User</h1>
+                <h1 class="title-dashboard">User</h1>
               </div>
               <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
