--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -33,7 +33,7 @@
   </li>
 
   <li class="nav-item">
-    <a class="nav-link" href="/admin/item">
+    <a class="nav-link" href="/setting">
       <i class="fas fa-fw fa-hotel"></i>
       <span>Settings</span>
     </a>
