--- a/views/partials/gauges.ejs
+++ b/views/partials/gauges.ejs
@@ -11,7 +11,7 @@
       headers: {
         "Content-Type": "application/json",
       },
-      url: "https://kirei-iot-server.herokuapp.com/api/v1/lampu/lampu",
+      url: "https://kirei-intern-server.herokuapp.com/api/v1/lampu/lampu",
       success: function (data) {
         $("#lampu1").text(data.data[0].lampu1);
         $("#lampu2").text(data.data[0].lampu2);
@@ -25,7 +25,7 @@
       headers: {
         "Content-Type": "application/json",
       },
-      url: "https://kirei-iot-server.herokuapp.com/api/v1/suhu",
+      url: "https://kirei-intern-server.herokuapp.com/api/v1/suhu",
       success: function (data) {
         $("#suhuCelcius").text(data.data[3].celcius);
         $("#humidity").text(data.data[3].humidity);
@@ -39,7 +39,7 @@
       headers: {
         "Content-Type": "application/json",
       },
-      url: "https://kirei-iot-server.herokuapp.com/api/v1/tanah",
+      url: "https://kirei-intern-server.herokuapp.com/api/v1/tanah",
       success: function (data) {
         $("#tanah").text(data.data[0].kelembapanTanah);
       },
@@ -52,7 +52,7 @@
       headers: {
         "Content-Type": "application/json",
       },
-      url: "https://kirei-iot-server.herokuapp.com/api/v1/water",
+      url: "https://kirei-intern-server.herokuapp.com/api/v1/water",
       success: function (data) {
         $("#waterlevel").text(parseFloat(data.data[0].waterlevel).toPrecision(3));
       },
@@ -65,7 +65,7 @@
       headers: {
         "Content-Type": "application/json",
       },
-      url: "https://kirei-iot-server.herokuapp.com/api/v1/keruhair",
+      url: "https://kirei-intern-server.herokuapp.com/api/v1/keruhair",
       success: function (dataaa) {
         $("#kekeruhanAir").text(dataaa.data[0].kekeruhanAir);
       },
