--- a/views/partials/graph.ejs
+++ b/views/partials/graph.ejs
@@ -5,7 +5,7 @@
 ></script>
 <script>
   var xmlhttp = new XMLHttpRequest();
-  var url = "http://localhost:4000/api/v1/suhu";
+  var url = "https://kirei-intern-server.herokuapp.com/api/v1/suhu";
   xmlhttp.open("GET", url, true);
   xmlhttp.send();
   xmlhttp.onreadystatechange = function () {
