--- a/views/partials/gauges.ejs
+++ b/views/partials/gauges.ejs
@@ -25,7 +25,7 @@
       headers: {
         "Content-Type": "application/json",
       },
-      url: "http://localhost:4000/api/v1/suhu",
+      url: "https://kirei-intern-server.herokuapp.com/api/v1/suhu",
       success: function (data) {
         $("#suhuCelcius").text(data.data[3].celcius ?? "No Data");
         $("#humidity").text(data.data[3].humidity ?? "No Data");
